# Project_NewLang

./: CMakeLists.txt  README.md  llvm_code.cpp  main.cpp
include/: PrototypeAST.h  kaleidoscope.h  kaleidoscopeJIT.h  lexer.h  token.h
src/: FunctionAST.cpp  VariableExprAST.cpp  codeGen.cpp  kaleidoscope.cpp  lexer.cpp
